[gd_scene load_steps=3 format=3 uid="uid://dfdm55jit0843"]

[ext_resource type="Script" uid="uid://bwbo0oqaimhps" path="res://scripts/components/managers/run_manager.gd" id="1_aj1af"]
[ext_resource type="PackedScene" uid="uid://bi76x172yppbt" path="res://scenes/components/managers/stats_manager.tscn" id="2_0v0uy"]

[node name="RunManager" type="Node"]
script = ExtResource("1_aj1af")

[node name="PlayerStatsManager" parent="." instance=ExtResource("2_0v0uy")]

[node name="EnemyStatsManager" parent="." instance=ExtResource("2_0v0uy")]

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
